
?? ??? 2007 - 2.2.0-trunk
-------------------------

 * Added experimental variables RESPONSE_CONTENT_LENGTH, RESPONSE_CONTENT_TYPE,
   and RESPONSE_CONTENT_ENCODING.

 * Added experimental support for content injection. Directive SecContentInjection
   (On|Off) controls whether injection is taking place. Actions "prepend"
   and "append" inject content when executed. Do note that it is your
   responsibility to make sure the response is of the appropriate
   content type (e.g. HTML, plain text, etc).

 * Added string comparison operators with support for macro expansion:
   @contains, @is, @beginsWith and @endsWith.

 * Enhanced debug log output to log macro expansion, quote values and
   correctly display values that contained NULs.

 * Removed support for %0 - %9 capture macros as they were incorrectly
   expanding url encoded values.  Use %{TX.0} - %{TX.9} instead.
	
 * Added t:length to transform a value to its character length.

 * Added t:trimLeft, t:trimRight, t:trim to remove whitespace
   from a value on the left, right or both.

 * Added SecAuditLog2 directive to allow redundent concurrent audit log
   index files.  This will allow sending audit data to two consoles, etc.

 * Removed CGI style HTTP_* variables in favor of REQUEST_HEADERS:Header-Name.

 * Store filename/line for each rule and display it and the ID (if available)
   in the debug log when invoking a rule.  Thanks to Christian Bockermann
   for the idea.

 * Do not log 'allow' action as intercepted in the debug log.

 * Write debug log messages when "capture" is set, but the regex does not
   capture and vice-versa.

 * Small performance improvement in memory management for rule execution.

 * Fixed some collection variable names not printing with the parameter
   and/or counting operator in the debug log.


05 Apr 2007 - 2.1.1-rc2
-----------------------

 * Add the PCRE_DOLLAR_ENDONLY option when compiling regular expression
   for the @rx operator and variables.
  