@@ -24,3 +24,13 @@ access to ModSecurity structures. For example:
 
   apxs -I<MODSECURITY_SOURCE_CODE> -I/usr/include/libxml2 -cia mod_op_strstr.c
 
+3)
+
+Module mod_var_remote_addr_port.c creates a custom variable "REMOTE_ADDR_PORT"
+that combines the REMOTE_ADDR and REMOTE_PORT into a.b.c.d:port format.
+
+Compiling this module is more involved because it requires
+access to ModSecurity structures. For example:
+
+  apxs -I<MODSECURITY_SOURCE_CODE> -cia mod_var_remote_addr_port.c
+
