@@ -1683,7 +1683,7 @@ static int var_webappid_generate(modsec_rec *msr, msre_var *var, msre_rule *rule
 /**
  *
  */
-static void msre_engine_variable_register(msre_engine *engine, const char *name, 
+void msre_engine_variable_register(msre_engine *engine, const char *name, 
     unsigned int type, unsigned int argc_min, unsigned int argc_max,
     FN_VAR_VALIDATE(validate), FN_VAR_GENERATE(generate),
     unsigned int is_cacheable, unsigned int availability)
